[touch:1369]documentation updates

--- a/Docs/UserGuide/tradecomponents/floatinglegdata.tex
+++ b/Docs/UserGuide/tradecomponents/floatinglegdata.tex
@@ -194,7 +194,7 @@ Allowable values: any non-negative whole number
   a spread of 0.5\% or 50 bp. 
 
 For the {\tt <Spreads>} section, the same applies as for notionals and
-rates - a list of changing spreads can be specified without or with individual starte dates as shown
+rates - a list of changing spreads can be specified without or with individual start dates as shown
 in Listing \ref{lst:spreads_dates}.
 \begin{listing}[H]
 %\hrule\medskip
