--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -185,6 +185,7 @@ INR-MIFOR \\
 MXN-TIIE \\
 PLN-WIBOR \\
 SKK-BRIBOR \\
+THB-THBFIX\\ THB-BIBOR\\
 NZD-BKBM \\
 \end{tabular}} \\ \hline
 TENOR                    & An integer followed by \emph{D, W, M or Y}                                                                                                                                                                                                                                                 \\ \hline
