--- a/Docs/UserGuide/curve_configurations/yieldcurves.tex
+++ b/Docs/UserGuide/curve_configurations/yieldcurves.tex
@@ -462,7 +462,7 @@ weights.
 \end{listing}
 
 \subsubsection*{Weighted Average Segment}
-\label{sec:yield_plus_default}
+\label{sec:weigthed_average}
 
 When the node name is \lstinline!WeightedAverage!, the \lstinline!Type! node has the only allowable value
 \emph{WeightedAverage}, and the node has the structure shown in Listing \ref{lst:weighted_average_segment}. This segment
