--- a/Docs/UserGuide/tradedata/equityoption.tex
+++ b/Docs/UserGuide/tradedata/equityoption.tex
@@ -11,7 +11,15 @@ an example \lstinline!EquityOptionData! node for an equity option is shown in Li
 \begin{minted}[fontsize=\footnotesize]{xml}
 <EquityOptionData>
     <OptionData>
-      ...
+         <LongShort>Long</LongShort>
+         <OptionType>Call</OptionType>
+         <Style>American</Style>
+         <Settlement>Cash</Settlement>
+         <PayOffAtExpiry>true</PayOffAtExpiry>
+         <ExerciseDates>
+             <ExerciseDate>2022-03-01</ExerciseDate>
+         </ExerciseDates>
+         ...
     </OptionData>
     <Name>RIC:.SPX</Name>
     <Currency>USD</Currency>
@@ -26,8 +34,27 @@ an example \lstinline!EquityOptionData! node for an equity option is shown in Li
 The meanings and allowable values of the elements in the \lstinline!EquityOptionData!  node follow below.
 
 \begin{itemize}
-	\item OptionData: This is a trade component sub-node outlined in section \ref{ss:option_data} Option Data. Note 
-	that the equity option type allows for \emph{European} and \emph{American} option style.	
+	\item OptionData: This is a trade component sub-node outlined in section \ref{ss:option_data} Option Data. The relevant fields in the \lstinline!OptionData! node for an EquityOption are:
+
+	
+	\begin{itemize}
+	\item \lstinline!LongShort! The allowable values are \emph{Long} or \emph{Short}.
+
+	\item \lstinline!OptionType! The allowable values are \emph{Call} or \emph{Put}.  \emph{Call} means that the option holder has the right to buy the given quantity of the underlying equity at the strike price.  \emph{Put} means that the option holder has the right to sell the given quantity of the underlying equity at the strike price. 
+	
+\item  \lstinline!Style! The allowable values are \emph{European} and \emph{American}. 
+
+\item  \lstinline!Settlement! The allowable values are \emph{Cash} or \emph{Physical}.
+
+\item \lstinline!PayOffAtExpiry! [Optional] The allowable values are \emph{true} for payoff at expiry, or \emph{false} for payoff at exercise. This field is relevant for \emph{American} style EquityOptions, and defaults to \emph{true} if left blank or omitted. 
+
+\item An \lstinline!ExerciseDates! node where exactly one ExerciseDate date element must be given. 
+
+\item Optional \lstinline!PremiumAmount!,  \lstinline!PremiumCurrency!, and \lstinline!PremiumPayDate! fields to specify the Equity Option premium. 
+
+\end{itemize}
+	
+
 	\item Name: The identifier of the underlying equity or equity index. \\
 	Allowable values:  See \lstinline!Name! for equity trades in Table \ref{tab:equity_credit_data}. \\
 	\item Underlying:  This node may be used as an alternative to the \lstinline!Name! node to specify the underlying equity. This in turn defines the equity curve used for pricing. The \lstinline!Underlying! node is described in further detail in Section \ref{ss:underlying}. \\
