Adding AUCPI to the userguide.

--- a/Docs/UserGuide/marketdata.tex
+++ b/Docs/UserGuide/marketdata.tex
@@ -1108,7 +1108,7 @@ Examples:
 \item {ZC\_INFLATIONSWAP/RATE/EUHICPXT/2Y}
 \end{itemize}
 
-Examples for inflation index names include EUHICP, EUHICPXT, FRHICP, FRCPI, UKRPI, USCPI, ZACPI, BEHICP.
+Examples for inflation index names include EUHICP, EUHICPXT, FRHICP, FRCPI, UKRPI, USCPI, ZACPI, BEHICP, AUCPI.
 
 %- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 \subsection{Year on Year Inflation Swap Rate}
