--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -1009,7 +1009,7 @@ Example & Description \\
 \hline
 16 & Equity Derivatives Exposure \\
 \hline
-17 & Inflation Swap Exposure \\
+17 & Inflation Swap Exposure under Dodgson-Kainth\\
 \hline
 18 & Bonds and Amortisation Structures\\
 \hline
@@ -1039,17 +1039,11 @@ Example & Description \\
 \hline
 31 & Exposure Simulation using a Close-out Grid\\
 \hline
-32 & Inflation Swap Exposure Simulation using Dodgson-Kainth demonstrating Calibration Baskets\\
+32 & Inflation Swap Exposure under Jarrow-Yildrim\\ 
 \hline
-33 & Inflation Swap Exposure Simulation using Jarrow-Yildirim\\
+33 & CDS Exposure Simulation \\
 \hline
-34 & Inflation Swap Exposure (TODO) \\
-\hline
-35 & CDS Exposure Simulation \\
-\hline
-36 & Inflation Swap Exposure (TODO) \\
-\hline
-37 & TODO: Wrong way risk \\
+34 & TODO: Wrong way risk \\
 \hline
 \end{tabular}
 \caption{ORE examples.}
@@ -1873,7 +1867,8 @@ and \ref{sec:fxoption}.
 \end{figure}
 
 %--------------------------------------------------------
-\subsection{Inflation Swap Exposures}% Example 17
+\subsection{Inflation Swap Exposure under Dodgson-Kainth}% Example 17
+\label{example:17}
 %--------------------------------------------------------
 
 The example portfolio in folder {\tt Examples/Example\_17} contains two CPI Swaps and one Year-on-Year Inflation Swap.
@@ -2215,6 +2210,22 @@ and moreover in the XVA analytics section of {\tt ore\_mpor.xml} as shown in Lis
 
 Run as usual calling {\tt python run.py}.
 
+%--------------------------------------------------------------------
+\subsection{Inflation Swap Exposure under Jarrow-Yildrim}% Example 32
+\label{example:32}
+%--------------------------------------------------------------------
+
+The example here is similar to that in Section \ref{example:17} in that we are generating exposures for inflation swaps. The example in Section \ref{example:17} uses the Dodgson-Kainth model whereas this example uses the Jarrow-Yildrim model. The valuation date is 5 Oct 2020 and the portfolio contains four spot starting inflation swaps:
+
+\begin{itemize}
+\item trade\_01: 20Y standard UKRPI ZCIIS struck at the fair market rate of 3.1925\% giving an NPV of 0.0. 
+\item trade\_02: 20Y standard EUHICPXT ZCIIS struck at the fair market rate of 1.16875\% giving an NPV of 0.0.
+\item trade\_03: 20Y year on year EUHICPXT swap.
+\item trade\_04: 20Y year on year UKRPI swap.
+\end{itemize}
+
+The example generates cash flows, NPVs, exposure evolutions and XVAs.
+
 \clearpage
 %========================================================
 \section{Launchers and Visualisation}\label{sec:visualisation}
@@ -2299,7 +2310,7 @@ scripts. The Excel demo is available in Example\_1. Launch {\tt Example\_1.xlsm}
 sheet, and kick off the ORE process.
 
 %========================================================
-\section{Parametrisation}\label{sec:configuration}
+\section{Parameterisation}\label{sec:configuration}
 %========================================================
 
 A run of ORE is kicked off with a single command line parameter 
@@ -3810,7 +3821,12 @@ FX model parameterisations.  Within each CrossAssetLGM section, the interpretati
 \end{itemize}
 
 \medskip
-The inflation model components are specified by a block as follows
+
+For the inflation model component, there is a choice between a Dodgson Kainth model and a Jarrow Yildrim model. The Dodgson Kainth 
+model is specified in a \lstinline!LGM! or \lstinline!DodgsonKainth! node as outlined in Listing \ref{lst:simulation_model_dk_inflation_configuration}.
+The inflation model parameterisation inherits from the LGM parameterisation for interest rate components, in particular the \lstinline!CalibrationType!, 
+\lstinline!Volatility! and \lstinline!Reversion! elements. The \lstinline!CalibrationCapFloors! element specify the model's calibration to a selection of 
+either CPI caps or CPI floors with specified strike.
 
 \begin{listing}[H]
 %\hrule\medskip
@@ -3843,11 +3859,163 @@ The inflation model components are specified by a block as follows
   ...
 <CrossAssetModel>	
 \end{minted}
-\caption{Simulation model inflation component configuration}
-\label{lst:simulation_model_inflation_configuration}
+\caption{Simulation model DK inflation component configuration}
+\label{lst:simulation_model_dk_inflation_configuration}
 \end{listing}
 
-The inflation model parameterisation inherits from the LGM parameterisation for interest rate components, in particular the CalibrationType, Volatility and Reversion elements.  The additional elements specify the model's calibration to a selection of either Caps or Floors.
+The calibration instruments may be specified in an alternative way via a \lstinline!CalibrationBaskets! node. In general, a \lstinline!CalibrationBaskets! node 
+can contain multiple \lstinline!CalibrationBasket! nodes each containing a list of calibration instruments of the same type. For Dodgson Kainth, only a single 
+calibration basket is allowed and the instruments must be of type \lstinline!CpiCapFloor!. So, for example, the \lstinline!CalibrationCapFloors! node in 
+Listing \ref{lst:simulation_model_dk_inflation_configuration} could be replaced with the \lstinline!CalibrationBaskets! node in \ref{lst:dk_inflation_calibration_basket}.
+
+\begin{listing}[H]
+\begin{minted}[fontsize=\footnotesize]{xml}
+<CalibrationBaskets>
+  <CalibrationBasket>
+    <CpiCapFloor>
+      <Type>Floor</Type>
+      <Maturity>2Y</Maturity>
+      <Strike>0.03</Strike>
+    </CpiCapFloor>
+    <CpiCapFloor>
+      <Type>Floor</Type>
+      <Maturity>4Y</Maturity>
+      <Strike>0.03</Strike>
+    </CpiCapFloor>
+    <CpiCapFloor>
+      <Type>Floor</Type>
+      <Maturity>6Y</Maturity>
+      <Strike>0.03</Strike>
+    </CpiCapFloor>
+    <CpiCapFloor>
+      <Type>Floor</Type>
+      <Maturity>8Y</Maturity>
+      <Strike>0.03</Strike>
+    </CpiCapFloor>
+    <CpiCapFloor>
+      <Type>Floor</Type>
+      <Maturity>10Y</Maturity>
+      <Strike>0.03</Strike>
+    </CpiCapFloor>
+  </CalibrationBasket>
+</CalibrationBaskets>
+\end{minted}
+\caption{Calibration basket for DK inflation model component}
+\label{lst:dk_inflation_calibration_basket}
+\end{listing}
+
+The Jarrow Yildrim model is specified in a \lstinline!JarrowYildirim! node as outlined in Listing \ref{lst:simulation_model_jy_inflation_configuration}. The \lstinline!RealRate! 
+node describes the JY real rate process and has \lstinline!Volatility! and \lstinline!Reversion! nodes that follow those outlined in the interest rate LGM section above. The  
+\lstinline!Index! node describes the JY index process and has a \lstinline!Volatility! component that follows the \lstinline!Sigma! component of the FX model above. The 
+\lstinline!CalibrationBaskets! node is as outlined above for Dodgson Kainth but up to two baskets may be used and extra inflation instruments are supported in the calibration. More 
+information is provided below.
+
+The \lstinline!CalibrationType! determines the calibration approach, if any, that is used to calibrate the various parameters of the model i.e.\ the real rate reversion, the real 
+rate volatility and the index volatility. If the \lstinline!CalibrationType! is \lstinline!None!, no calibration is attempted and all parameter values must be explicitly specified.
+If the \lstinline!CalibrationType! is \lstinline!BestFit!, the parameters that have \lstinline!Calibrate! set to \lstinline!Y! will be calibrated to the instruments specified in 
+the \lstinline!CalibrationBaskets! node. If the \lstinline!CalibrationType! is \lstinline!Bootstrap!, there are a number of options:
+
+\begin{enumerate}
+\item
+The index volatility parameter may be calibrated, indicated by setting \lstinline!Calibrate! to \lstinline!Y! for that parameter, with both of the real rate parameters not calibrated 
+and set explicitly in the \lstinline!RealRate! node. There should be exactly one \lstinline!CalibrationBasket! in the \lstinline!CalibrationBaskets! node and its \lstinline!parameter! 
+attribute may be set to \lstinline!Index! or omitted.
+
+\item
+One of the real rate parameters may be calibrated, indicated by setting \lstinline!Calibrate! to \lstinline!Y! for that parameter, with the index volatility not calibrated and set 
+explicitly in the \lstinline!Volatility! node. There should be exactly one \lstinline!CalibrationBasket! in the \lstinline!CalibrationBaskets! node and its \lstinline!parameter! 
+attribute may be set to \lstinline!RealRate! or omitted.
+
+\item
+One of the real rate parameters and the index volatility parameter may be calibrated together. There should be exactly two \lstinline!CalibrationBasket! nodes in the \lstinline!CalibrationBaskets! 
+node. The \lstinline!parameter! attribute should be set to \lstinline!RealRate! on the \lstinline!CalibrationBasket! node that should be used for the real rate parameter calibration. 
+Similarly, the \lstinline!parameter! attribute should be set to \lstinline!Index! on the \lstinline!CalibrationBasket! node that should be used for the index volatility parameter calibration. 
+The parameters are calibrated iteratively in turn until the root mean squared error over all calibration instruments in the two baskets is below the tolerance specified by the 
+\lstinline!RmseTolerance! in the \lstinline!CalibrationConfiguration! node or until the maximum number of iterations as specified by the \lstinline!MaxIterations! in the 
+\lstinline!CalibrationConfiguration! node has been reached. The \lstinline!CalibrationConfiguration! node is optional. If it is omitted, the \lstinline!RmseTolerance! defaults to 0.0001 and the 
+\lstinline!MaxIterations! defaults to 50.
+
+\end{enumerate}
+
+Note that it is an error to attempt to calibrate both of the real rate parameters together when \lstinline!CalibrationType! is \lstinline!Bootstrap!. If a parameter is being calibrated 
+with \lstinline!CalibrationType! set to \lstinline!Bootstrap!, the \lstinline!ParamType! should be \lstinline!Piecewise!. The \lstinline!TimeGrid! will be overridden for that parameter by 
+the relevant calibration instrument times and the parameter's initial values are set to the first element of the \lstinline!InitialValue! list. So, leaving the \lstinline!TimeGrid! node 
+empty and giving a single value in the \lstinline!InitialValue! node is the clearest XML setup in this case.
+
+\begin{listing}[H]
+\begin{minted}[fontsize=\footnotesize]{xml}	
+<JarrowYildirim index="EUHICPXT">
+  <Currency>EUR</Currency>
+  <CalibrationType>Bootstrap</CalibrationType>
+  <RealRate>
+    <Volatility>
+      <Calibrate>Y</Calibrate>
+      <VolatilityType>Hagan</VolatilityType>
+      <ParamType>Piecewise</ParamType>
+      <TimeGrid/>
+      <InitialValue>0.0001</InitialValue>
+    </Volatility>
+    <Reversion>
+      <Calibrate>N</Calibrate>
+      <ReversionType>HullWhite</ReversionType>
+      <ParamType>Constant</ParamType>
+      <TimeGrid/>
+      <InitialValue>0.5</InitialValue>
+    </Reversion>
+    <ParameterTransformation>
+      <ShiftHorizon>0.0</ShiftHorizon>
+      <Scaling>1.0</Scaling>
+    </ParameterTransformation>
+  </RealRate>
+  <Index>
+    <Volatility>
+      <Calibrate>Y</Calibrate>
+      <ParamType>Piecewise</ParamType>
+      <TimeGrid/>
+      <InitialValue>0.0001</InitialValue>
+    </Volatility>
+  </Index>
+  <CalibrationBaskets>
+    <CalibrationBasket parameter="Index">
+      <CpiCapFloor>
+        <Type>Floor</Type>
+        <Maturity>2Y</Maturity>
+        <Strike>0.0</Strike>
+      </CpiCapFloor>
+      ...
+    </CalibrationBasket>
+    <CalibrationBasket parameter="RealRate">
+      <YoYSwap>
+        <Tenor>2Y</Tenor>
+      </YoYSwap>
+      ...
+    </CalibrationBasket>
+  </CalibrationBaskets>
+  <CalibrationConfiguration>
+    <RmseTolerance>0.00000001</RmseTolerance>
+    <MaxIterations>40</MaxIterations>
+  </CalibrationConfiguration>
+</JarrowYildirim>
+\end{minted}
+\caption{Simulation model JY inflation component configuration}
+\label{lst:simulation_model_jy_inflation_configuration}
+\end{listing}
+
+The \lstinline!CpiCapFloor! and \lstinline!YoYSwap! calibration instruments can be seen in Listing \ref{lst:simulation_model_jy_inflation_configuration}. A \lstinline!YoYCapFloor! is 
+also allowed and it has the structure shown in Listing \ref{lst:yoy_cf_calibration_inst}. The \lstinline!Type! may be \lstinline!Cap! or \lstinline!Floor!. The \lstinline!Tenor! should 
+be a maturity period e.g.\ \lstinline!5Y!. The \lstinline!Strike! should be an absolute strike level for the year on year cap or floor e.g.\ \lstinline!0.01! for 1\%.
+
+\begin{listing}[H]
+\begin{minted}[fontsize=\footnotesize]{xml}	
+<YoYCapFloor>
+  <Type>...</Type>
+  <Tenor>...</Tenor>
+  <Strike>...</Strike>
+</YoYCapFloor>
+\end{minted}
+\caption{Layout for \lstinline!YoYCapFloor! calibration instrument.}
+\label{lst:yoy_cf_calibration_inst}
+\end{listing}
 
 \medskip
 Finally, the instantaneous correlation structure is specified as follows.
