--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -256,6 +256,8 @@ Equity Swaps & Y & Y & Y & N\\
 \hline
 Equity Options & Y & Y & Y & Y \\
 \hline
+Equity Future Options & Y & Y & Y & Y \\
+\hline
 Commodity Forwards & Y & Y & N & N\\
 \hline
 Commodity Options & Y & Y & N & N \\
@@ -5692,6 +5694,7 @@ This node is used only if \lstinline!DontThrow! is \lstinline!true!. The meaning
 \input{tradedata/fxswap}
 \input{tradedata/fxoption}
 \input{tradedata/equityoption}
+\input{tradedata/equityfuturesoption}
 \input{tradedata/equityforward}
 \input{tradedata/equityswap}
 \input{tradedata/cpiswap}
