corrected nakedoption in listings

--- a/Docs/UserGuide/tradecomponents/cmsleg.tex
+++ b/Docs/UserGuide/tradecomponents/cmsleg.tex
@@ -32,8 +32,8 @@ Listing \ref{lst:cmslegdata} shows an example for a leg of type CMS.
           <Floors>
             <Floor>0.01</Floor>
           </Floors>
+          <NakedOption>false</NakedOption>
         </CMSLegData>
-        <NakedOption>N</NakedOption>
       </LegData>
 \end{minted}
 \caption{CMS leg data}
