--- a/Docs/UserGuide/tradecomponents/digitalcmsspreadleg.tex
+++ b/Docs/UserGuide/tradecomponents/digitalcmsspreadleg.tex
@@ -28,7 +28,7 @@ Listing \ref{lst:digitalcmsspreadlegdata} shows an example for a leg of type Dig
               <Gearings>
                 <Gearing>8.0</Gearing>
               </Gearings>
-              <NakedOption>N</NakedOption>
+              <NakedOption>false</NakedOption>
             </CMSSpreadLegData>
             <CallPosition>Long</CallPosition>
             <IsCallATMIncluded>false</IsCallATMIncluded>
