--- a/Docs/UserGuide/tradedata/equityfuturesoption.tex
+++ b/Docs/UserGuide/tradedata/equityfuturesoption.tex
@@ -43,7 +43,7 @@ The meanings and allowable values of the elements in the \lstinline!EquityFuture
 
 	\item \lstinline!OptionType! The allowable values are \emph{Call} or \emph{Put}.  \emph{Call} means that the option holder has the right to buy the given quantity of the underlying equity at the strike price.  \emph{Put} means that the option holder has the right to sell the given quantity of the underlying equity at the strike price. 
 	
-\item  \lstinline!Style! The allowable values are \emph{European} and \emph{American}. 
+\item  \lstinline!Style! The allowable value is \emph{European}. 
 
 \item  \lstinline!Settlement! The allowable values are \emph{Cash} or \emph{Physical}.
 
